Update GIFs for fixed header and minor styling adjustment for landscape orientation to prevent overflow on home page containers.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1002,7 +1002,7 @@ footer {
     }
 
     .info-container p {
-        font-size: min(4.5vmin, 3vmax);
+        font-size: min(4.5vmin, 2.75vmax);
     }
 
     #info-section-middle {
